--- a/about.html
+++ b/about.html
@@ -84,8 +84,11 @@
 			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-xl-12">
+						<div class="section-title">
+							<h2>About us</h2>
+						</div>
 						<p>
-							Torinit exists to assist mid-market enterprises to shape their path to digitally enabled
+							Torinit exists to assist mid-market enterprises shape their path to digitally enabled
 							success. We’re
 							more than
 							digital consultants - we’re full partners in your journey to solving critical business
@@ -163,6 +166,8 @@
 				</div>
 				<div class="row content">
 					<div class="col-xl-12">
+
+
 						<p class="mb-0">
 							Torinit was founded in 2016 as a software development firm to fill a gap in the digital
 							ecosystem. Unlike
@@ -308,7 +313,8 @@
 								specializes in
 								defining core
 								success criteria for each digital initiative.</p>
-							<p class="text-italic">Toronto, Canada
+							<p class="text-italic">
+								<!-- <img src="assets/img/location_icon_new.png" width="25px"> --> Toronto, Canada
 							</p>
 						</div>
 					</div>
@@ -370,7 +376,8 @@
 								</h3>
 
 							</div>
-							<p>Ensuring successful on time, on budget implementations is a key advantage of working with
+							<p>Ensuring successful, on time, on budget implementations is a key advantage of working
+								with
 								an
 								accountable digital
 								partner. Our delivery practice specializes in following best practices that mitigates
