--- a/goals/transform-your-enterprise.html
+++ b/goals/transform-your-enterprise.html
@@ -179,7 +179,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 1</h3>
-								<p>Discover and Map end to end business operations in an assembly line view.
+								<p>Discover and Map end to end business operations in an assembly line view. Conduct a deeper mapping of workflows, and information architecture (IA) to understand each step involved. 
 								</p>
 							</div>
 						</div>
@@ -189,7 +189,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 2</h3>
-								<p>Identify areas of improvement and automation.
+								<p>With in-depth IA at our disposal, we Identify areas for improvement that will either improve the quality of the outputs or shorten time and effort to get to better outcomes at the end of each step.
 								</p>
 							</div>
 						</div>
@@ -199,7 +199,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 3</h3>
-								<p>Analyze business impact of identified areas of improvements.
+								<p>Analyze business impact in reference to the effort required to deliver on the identified improvement initiatives.
 
 								</p>
 							</div>
@@ -210,9 +210,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 4</h3>
-								<p>Create a roadmap with high to low impact initiatives that have positive anticipated results. Define
-									the success criteria
-									of each initiative.
+								<p>Create a roadmap with high to low impact initiatives that have positive anticipated results and define the success criteria of each initiative. 
 
 								</p>
 							</div>
@@ -223,7 +221,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 5</h3>
-								<p>Build and implement initiatives on the roadmap.
+								<p>Implement initiatives and manage transition between various business functions. 
 
 								</p>
 							</div>
@@ -234,7 +232,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 6</h3>
-								<p>Measure impact, success and areas to improve the solution for the next phases of improvements.
+								<p>Measure impact, success and areas to improve the solution for the next phases of improvements. 
 
 								</p>
 							</div>
