--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 				<div class="row content">
 					<div class="col-xl-12">
 						<div class="section-title">
-							<h2>What we do.</h2>
+							<h2>Who we are.</h2>
 						</div>
 						<p>
 							We are digital management consultants, product cartographers, experience designers, and
 							software
 							engineers. We partner
-							with enterprises to assist them in conquering the digital world, and future proofing the
+							with enterprises to assist them in conquering the digital world, and future proofing their
 							business.
 
 						</p>
@@ -172,16 +172,7 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products have become a prominent source of information distribution today.
-								Strategically built
-								products enable
-								customer success, acceleration of revenues, controlling of costs. Torinit has
-								accumulated a
-								significant
-								body of
-								knowledge in the area of product development, and enabled many enterprises to build
-								better
-								products.
+							<p>Digital products have become a prominent source of information distribution today. Strategically built products enable better customer success, increased adoption and retention, acceleration of revenues, and increased brand equity. Torinit has accumulated a significant body of knowledge in the area of product development, which has enabled many enterprises to build better products.
 
 							</p>
 							<a href="services/product-development.html" class="btn-learn-more stretched-link">
@@ -198,16 +189,7 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating meaningful experiences for your customers, consumers (often different from
-								customers), and
-								employees has a
-								direct correlation with the health of your enterprise; both financially and
-								qualitatively.
-								At Torinit,
-								we have built
-								state of the art design systems for various business applications that have benefited
-								our
-								customers.
+							<p>Delivering meaningful experiences to your customers, consumers, and employees has a direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit, we have built state of the art design systems for various business applications that have benefited our customers.
 
 							</p>
 							<a href="services/experience-design.html" class="btn-learn-more stretched-link">
@@ -294,10 +276,9 @@
 				<div class="row content">
 					<div class="col-md-12">
 						<div class="section-title">
-							<h2>Who we are.</h2>
+							<h2>What we do.</h2>
 						</div>
-						<p>Torinit exists to assist mid-market enterprises to shape their path to digitally enabled
-							success. We’re
+						<p>Torinit exists to assist mid-market enterprises shape their path to digitally enabled success. We’re
 							more than
 							digital consultants - we’re full partners in your journey to solving critical business
 							challenges and
