--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
 								defining core
 								success criteria for each digital initiative.</p>
 							<p class="text-italic">
-								<!-- <img src="assets/img/location_icon_new.png" width="25px"> --> Toronto, Canada
+								<img src="assets/img/location-icon.svg" class="location-icon"> Toronto, Canada
 							</p>
 						</div>
 					</div>
@@ -332,7 +332,8 @@
 								architecture to
 								measuring business
 								performance post implementation of products and initiatives.</p>
-							<p class="text-italic"> Toronto, Canada</p>
+							<p class="text-italic"> <img src="assets/img/location-icon.svg"
+									class="location-icon">Toronto, Canada</p>
 						</div>
 					</div>
 					<div class="columnbox3">
@@ -345,7 +346,8 @@
 								in converting
 								business
 								requirements into workflows, user experiences, and UI designs that users cherish.</p>
-							<p class="text-italic">Toronto, Canada
+							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon">
+								Toronto, Canada
 							</p>
 						</div>
 					</div>
@@ -361,7 +363,9 @@
 								engineering team
 								has solved some of
 								the biggest challenges faced by enterprises over the past decade.</p>
-							<p class="text-italic">Pune, Mumbai, and Nagpur, India
+							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+								Mumbai, and
+								Nagpur, India
 
 							</p>
 						</div>
@@ -385,7 +389,8 @@
 								over budget, and
 								unsuccessful deliveries.
 							</p>
-							<p class="text-italic">Pune, India
+							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+								India
 
 
 							</p>
@@ -405,7 +410,8 @@
 								operations is key to productive delivery teams that operate on optimal velocity. Our
 								DevOps team ensures that all
 								solutions are developed & deployed optimally.</p>
-							<p class="text-italic">Pune, India
+							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+								India
 
 
 							</p>
@@ -496,7 +502,7 @@
 								<li><a href="contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
