--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
 								<li><a href="contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
