--- a/goals/build-better-products.html
+++ b/goals/build-better-products.html
@@ -30,7 +30,8 @@
 				<ul>
 
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
+								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -172,11 +173,14 @@
 							<div class="contentbox largeboxesfirst">
 								<h3>Product Development Approach
 								</h3>
-								<p>Working Backwards Framework - Developed by Amazon, a product development framework in which we
+								<p>Working Backwards Framework - Developed by Amazon, a product development framework in
+									which we
 									would write a description
-									of the end product on day one like we would on launch day. We provide the written description of the
+									of the end product on day one like we would on launch day. We provide the written
+									description of the
 									product to the
-									potential core audience to gather their feedback. This governs us to only build features that will
+									potential core audience to gather their feedback. This governs us to only build
+									features that will
 									be truly valuable to
 									the user.
 
@@ -187,9 +191,11 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="contentbox largeboxes">
 								<h3>Prioritization Frameworks</h3>
-								<p>Value vs. Complexity - This framework enables our team with an objective framework to determine
+								<p>Value vs. Complexity - This framework enables our team with an objective framework to
+									determine
 									which initiatives to
-									prioritize on the roadmap. The team scores each feature according to how much value it will bring to
+									prioritize on the roadmap. The team scores each feature according to how much value
+									it will bring to
 									the product and its
 									level of difficulty to implement.
 
@@ -200,7 +206,8 @@
 							<div class="contentbox largeboxes">
 								<h3>UX/Design Frameworks
 								</h3>
-								<p>Design thinking is a framework that allows us to always view everything from the user’s point of
+								<p>Design thinking is a framework that allows us to always view everything from the
+									user’s point of
 									view. It is the most
 									human-centred approach to building products.
 
@@ -212,9 +219,11 @@
 							<div class="contentbox largeboxes">
 								<h3>Agile Product Management Frameworks
 								</h3>
-								<p>Lean Software Development Model - Originally called the Toyota Production System, this framework
+								<p>Lean Software Development Model - Originally called the Toyota Production System,
+									this framework
 									allows us to deliver
-									core functions of a product with utmost speed, and agility. Often enabling us to get a lot of user
+									core functions of a product with utmost speed, and agility. Often enabling us to get
+									a lot of user
 									feedback early on
 									that helps in organizing the future roadmap that reflects real user feedback.
 
@@ -312,7 +321,7 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
