--- a/goals/improve-digital-experiences.html
+++ b/goals/improve-digital-experiences.html
@@ -154,13 +154,17 @@
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>To remain relevant, businesses must understand how to meet and adapt to their customers’ evolving needs.
+						<p>To remain relevant, businesses must understand how to meet and adapt to their customers’
+							evolving needs.
 							We assist you
-							build winning experiences that drive brand loyalty at every touchpoint, and align with each stakeholders
+							build winning experiences that drive brand loyalty at every touchpoint, and align with each
+							stakeholders
 							motivations. By
-							adopting stellar CX, UX, and UI practices, we deliver highly engaging user journeys that drive
+							adopting stellar CX, UX, and UI practices, we deliver highly engaging user journeys that
+							drive
 							acquisition, adoption,
-							retention, and minimize barriers to usability directly benefiting the financial performance of the
+							retention, and minimize barriers to usability directly benefiting the financial performance
+							of the
 							business.
 
 						</p>
@@ -172,7 +176,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 1</h3>
-								<p>Understand all your stakeholders, and their various motivations and purposes in regards to your
+								<p>Understand all your stakeholders, and their various motivations and purposes in
+									regards to your
 									business offering.
 
 
@@ -185,7 +190,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 2</h3>
-								<p>Audit existing journeys experienced by each stakeholder to identify points of friction, unnecessary
+								<p>Audit existing journeys experienced by each stakeholder to identify points of
+									friction, unnecessary
 									steps, or
 									overwhelmed information flows identifying experience debt.
 
@@ -199,7 +205,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 3</h3>
-								<p>Researching experience provided by industry leaders and identifying business processes that enable
+								<p>Researching experience provided by industry leaders and identifying business
+									processes that enable
 									better experience
 									delivery.
 
@@ -212,7 +219,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 4</h3>
-								<p>Analyzing impact on your business if best practices were to be applied to deliver better experience
+								<p>Analyzing impact on your business if best practices were to be applied to deliver
+									better experience
 									to your
 									stakeholders.
 
@@ -225,7 +233,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 5</h3>
-								<p>Creating a few improved stakeholder journeys to run pre-development sensitivity tests with a segment
+								<p>Creating a few improved stakeholder journeys to run pre-development sensitivity tests
+									with a segment
 									of your core
 									audience.
 
@@ -239,7 +248,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 6</h3>
-								<p>Building a design system that works best for your audiences, and head to developing experiences on
+								<p>Building a design system that works best for your audiences, and head to developing
+									experiences on
 									the defined design
 									system.
 
@@ -274,11 +284,14 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating meaningful experiences for your customers, consumers (often different from customers), and
+							<p>Creating meaningful experiences for your customers, consumers (often different from
+								customers), and
 								employees has a
-								direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit,
+								direct correlation with the health of your enterprise; both financially and
+								qualitatively. At Torinit,
 								we have built
-								state of the art design systems for various business applications that have benefited our customers.
+								state of the art design systems for various business applications that have benefited
+								our customers.
 							</p>
 							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
 								Learn More </a>
@@ -332,7 +345,7 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
