--- a/goals/transform-your-enterprise.html
+++ b/goals/transform-your-enterprise.html
@@ -160,13 +160,17 @@
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>We understand and map your end to end business operations for each division in an assembly line view.
+						<p>We understand and map your end to end business operations for each division in an assembly
+							line view.
 							Identify
-							opportunities for improvement, and automation. Conduct an in-depth analysis on the potential impacts on
+							opportunities for improvement, and automation. Conduct an in-depth analysis on the potential
+							impacts on
 							the business
-							from all aspects of executing the identified improvements. Create a roadmap with initiatives that have
+							from all aspects of executing the identified improvements. Create a roadmap with initiatives
+							that have
 							high business
-							impact and forecasted positive returns on effort. Build and implement solutions, measure impact and
+							impact and forecasted positive returns on effort. Build and implement solutions, measure
+							impact and
 							success, and
 							continue the improvement cycle.
 
@@ -179,7 +183,9 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 1</h3>
-								<p>Discover and Map end to end business operations in an assembly line view. Conduct a deeper mapping of workflows, and information architecture (IA) to understand each step involved. 
+								<p>Discover and Map end to end business operations in an assembly line view. Conduct a
+									deeper mapping of workflows, and information architecture (IA) to understand each
+									step involved.
 								</p>
 							</div>
 						</div>
@@ -189,7 +195,9 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 2</h3>
-								<p>With in-depth IA at our disposal, we Identify areas for improvement that will either improve the quality of the outputs or shorten time and effort to get to better outcomes at the end of each step.
+								<p>With in-depth IA at our disposal, we Identify areas for improvement that will either
+									improve the quality of the outputs or shorten time and effort to get to better
+									outcomes at the end of each step.
 								</p>
 							</div>
 						</div>
@@ -199,7 +207,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 3</h3>
-								<p>Analyze business impact in reference to the effort required to deliver on the identified improvement initiatives.
+								<p>Analyze business impact in reference to the effort required to deliver on the
+									identified improvement initiatives.
 
 								</p>
 							</div>
@@ -210,7 +219,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 4</h3>
-								<p>Create a roadmap with high to low impact initiatives that have positive anticipated results and define the success criteria of each initiative. 
+								<p>Create a roadmap with high to low impact initiatives that have positive anticipated
+									results and define the success criteria of each initiative.
 
 								</p>
 							</div>
@@ -221,7 +231,7 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 5</h3>
-								<p>Implement initiatives and manage transition between various business functions. 
+								<p>Implement initiatives and manage transition between various business functions.
 
 								</p>
 							</div>
@@ -232,7 +242,8 @@
 							<img src="../assets/img/steps.svg">
 							<div class="content">
 								<h3>Step 6</h3>
-								<p>Measure impact, success and areas to improve the solution for the next phases of improvements. 
+								<p>Measure impact, success and areas to improve the solution for the next phases of
+									improvements.
 
 								</p>
 							</div>
@@ -296,7 +307,8 @@
 			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-lg-9 col-md-8 align-self-center">
-						<h3>Contact us to learn more about our methodologies, frameworks and processes used to deliver digital
+						<h3>Contact us to learn more about our methodologies, frameworks and processes used to deliver
+							digital
 							success to
 							enterprises world over.</h3>
 					</div>
@@ -332,7 +344,7 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
