--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 				<ul>
 
 					<li><a class="nav-link" href="about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -172,7 +171,10 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products have become a prominent source of information distribution today. Strategically built products enable better customer success, increased adoption and retention, acceleration of revenues, and increased brand equity. Torinit has accumulated a significant body of knowledge in the area of product development, which has enabled many enterprises to build better products.
+							<p>Digital products have become a prominent source of information distribution today. Strategically built
+								products enable better customer success, increased adoption and retention, acceleration of revenues, and
+								increased brand equity. Torinit has accumulated a significant body of knowledge in the area of product
+								development, which has enabled many enterprises to build better products.
 
 							</p>
 							<a href="services/product-development.html" class="btn-learn-more stretched-link">
@@ -189,7 +191,9 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Delivering meaningful experiences to your customers, consumers, and employees has a direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit, we have built state of the art design systems for various business applications that have benefited our customers.
+							<p>Delivering meaningful experiences to your customers, consumers, and employees has a direct correlation
+								with the health of your enterprise; both financially and qualitatively. At Torinit, we have built state
+								of the art design systems for various business applications that have benefited our customers.
 
 							</p>
 							<a href="services/experience-design.html" class="btn-learn-more stretched-link">
@@ -480,7 +484,7 @@
 								<li><a href="contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
