--- a/services/product-development.html
+++ b/services/product-development.html
@@ -284,10 +284,10 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
-									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
-						</div>
+					<div class="linkedin" style="display: block !important;">
+						<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
+								src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
+					</div>
 						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
