--- a/goals/accelerate-revenues.html
+++ b/goals/accelerate-revenues.html
@@ -270,8 +270,9 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
-							<img src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn
+						<div class="linkedin" style="display: block !important;">
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
+									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
