--- a/goals/accelerate-sales.html
+++ b/goals/accelerate-sales.html
@@ -30,7 +30,8 @@
 				<ul>
 
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
+								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -231,11 +232,14 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products have become a prominent source of information distribution today. Strategically built
+							<p>Digital products have become a prominent source of information distribution today.
+								Strategically built
 								products enable
-								customer success, acceleration of revenues, controlling of costs. Torinit has accumulated a significant
+								customer success, acceleration of revenues, controlling of costs. Torinit has
+								accumulated a significant
 								body of
-								knowledge in the area of product development, and enabled many enterprises to build better products.
+								knowledge in the area of product development, and enabled many enterprises to build
+								better products.
 							</p>
 							<a href="../services/product-development.html" class="btn-learn-more stretched-link">
 								Learn More</a>
@@ -251,11 +255,14 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating meaningful experiences for your customers, consumers (often different from customers), and
+							<p>Creating meaningful experiences for your customers, consumers (often different from
+								customers), and
 								employees has a
-								direct correlation with the health of your enterprise; both financially and qualitatively. At Torinit,
+								direct correlation with the health of your enterprise; both financially and
+								qualitatively. At Torinit,
 								we have built
-								state of the art design systems for various business applications that have benefited our customers.
+								state of the art design systems for various business applications that have benefited
+								our customers.
 							</p>
 							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
 								Learn More</a>
@@ -313,7 +320,7 @@
 								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
-						<div class="socialmedia">
+						<div class="linkedin" style="display: block !important;">
 							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
