--- a/goals/build-better-products.html
+++ b/goals/build-better-products.html
@@ -30,8 +30,7 @@
 				<ul>
 
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -70,7 +69,7 @@
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-2">
 		<div class="banner-container container">
 
-			<h1>Torinit is a product development powerhouse.</h1>
+			<h1>Product development powerhouse.</h1>
 			<p>Strategy. Product Management. Design. Engineering. QA. Delivery. DevOps.
 
 
