--- a/goals/build-data-intelligence.html
+++ b/goals/build-data-intelligence.html
@@ -30,8 +30,7 @@
 				<ul>
 
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -67,7 +66,8 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-3">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-3"
+		style="background-position: center center !important;">
 		<div class="banner-container container">
 
 			<h1>Build data intelligence</h1>
@@ -90,7 +90,7 @@
 				</div>
 				<div class="row largedata">
 					<div class="col-md-12">
-						<div class="contentbox">
+						<div class="contentbox largeboxesfirst">
 							<h3>Data Mining</h3>
 							<p>Understanding the current state of data collection, and extracting valuable data for
 								further
