--- a/services/engineering-pods.html
+++ b/services/engineering-pods.html
@@ -30,8 +30,7 @@
 				<ul>
 
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -115,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row largedata">
+				<div class="row largedata benefits">
 					<div class="col-lg-6 col-md-6 col-xl-4">
 						<div class="contentbox">
 							<h3>Bring expertise
