--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 about-banner"
 		style="background: url(assets/img/about.jpg);">
 		<div class="banner-container container about">
 
@@ -313,8 +313,8 @@
 								specializes in
 								defining core
 								success criteria for each digital initiative.</p>
-							<p class="text-italic">
-								<img src="assets/img/location-icon.svg" class="location-icon"> Toronto, Canada
+							<p class="text-italic location-text">
+								<img src="assets/img/location-blue.png" class="location-icon"> Toronto, Canada
 							</p>
 						</div>
 					</div>
@@ -332,7 +332,7 @@
 								architecture to
 								measuring business
 								performance post implementation of products and initiatives.</p>
-							<p class="text-italic"> <img src="assets/img/location-icon.svg"
+							<p class="text-italic location-text"> <img src="assets/img/location-white.png"
 									class="location-icon">Toronto, Canada</p>
 						</div>
 					</div>
@@ -346,7 +346,8 @@
 								in converting
 								business
 								requirements into workflows, user experiences, and UI designs that users cherish.</p>
-							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon">
+							<p class="text-italic location-text"><img src="assets/img/location-blue.png"
+									class="location-icon">
 								Toronto, Canada
 							</p>
 						</div>
@@ -363,7 +364,8 @@
 								engineering team
 								has solved some of
 								the biggest challenges faced by enterprises over the past decade.</p>
-							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+							<p class="text-italic location-text"><img src="assets/img/location-white.png"
+									class="location-icon"> Pune,
 								Mumbai, and
 								Nagpur, India
 
@@ -389,7 +391,8 @@
 								over budget, and
 								unsuccessful deliveries.
 							</p>
-							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+							<p class="text-italic location-text"><img src="assets/img/location-blue.png"
+									class="location-icon"> Pune,
 								India
 
 
@@ -410,7 +413,8 @@
 								operations is key to productive delivery teams that operate on optimal velocity. Our
 								DevOps team ensures that all
 								solutions are developed & deployed optimally.</p>
-							<p class="text-italic"><img src="assets/img/location-icon.svg" class="location-icon"> Pune,
+							<p class="text-italic location-text"><img src="assets/img/location-white.png"
+									class="location-icon"> Pune,
 								India
 
 
