--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 			</div>
 			<div class="carousel-item slide-2">
 				<div class="carousel-container container">
-					<h1>Accelerating your path <br>to digitally enabled success
+					<h1 class="d-none d-sm-block">Accelerating your path <br>to digitally enabled success
+					</h1>
+					<h1 class="d-block d-sm-none">Accelerating your path to digitally enabled success
 					</h1>
 					<p>We are a digital transformation company enabling high impact data driven initiatives that
 						accelerate your
